tests/whole_screen/snapshots/whole_screen__login_accounts_signed_in_40.snap
---
source: tests/whole_screen/main.rs
expression: plans
---
40x30 cursor 28,0 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|                                        |
|Warning: No models available. Use /login|
|or set an API key environment variable. |
|Then use /model to select a model.      |
|                                        |
|› /login                                |
|                                        |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Log in                                  |
|                                        |
|Choose the account whose plan pays for  |
|usage.                                  |
|                                        |
|› OpenAI                                |
|  signed in · may train on what is sent…|
|                                        |
|  Kimi Code · kimi.ai                   |
|  may train on what is sent · Kimi Code…|
|                                        |
|  Kimi Code · kimi.com                  |
|  may use what is sent · Kimi Code plan…|
|                                        |
|esc to go back                          |
|                                        |
