tests/whole_screen/snapshots/whole_screen__login_keys_signed_in_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1502
expression: keys
---
40x30 cursor 29,0 scrolled 0
|────────────────────────────────────────|
|                                        |
|Log in                                  |
|                                        |
|  DeepSeek                              |
|  set DEEPSEEK_API_KEY                  |
|                                        |
|  Google                                |
|  uses what is sent · set GEMINI_API_KEY|
|                                        |
|  Meta                                  |
|  set META_API_KEY                      |
|                                        |
|  MiMo                                  |
|  set MIMO_API_KEY                      |
|                                        |
|  MiniMax · minimax.io                  |
|  may use what is sent · set MINIMAX_AP…|
|                                        |
|  MiniMax · minimaxi.com                |
|  may use what is sent · a pay-as-you-g…|
|                                        |
|  MoonshotAI · kimi.ai                  |
|  may train on what is sent · a Kimi Co…|
|                                        |
|› MoonshotAI · kimi.com                 |
|  signed in · may use what is sent      |
|  · 7 more                              |
|                                        |
|esc to go back                          |
