tests/whole_screen/snapshots/whole_screen__login_narrowed_40.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
40x30 cursor 29,0 scrolled 0
|Warning: No models available. Use      │|
|/login or set an API key environment   │|
|variable. Then use /model to select a  ┃|
|model.                                 ┃|
|                                       ┃|
|› /login kimi                          ●|
|────────────────────────────────────────|
|                                        |
|Log in                                  |
|                                        |
|Choose the account or key to sign in    |
|with.                                   |
|                                        |
|Subscription                            |
|                                        |
|› Kimi Code · kimi.ai                   |
|  may train on what is sent · Kimi Code…|
|                                        |
|  Kimi Code · kimi.com                  |
|  may use what is sent · Kimi Code plan…|
|                                        |
|API key                                 |
|                                        |
|  MoonshotAI · kimi.ai                  |
|  may train on what is sent · a Kimi Co…|
|                                        |
|  MoonshotAI · kimi.com                 |
|  may use what is sent · set MOONSHOT_A…|
|                                        |
|esc to cancel                           |
