tests/whole_screen/snapshots/whole_screen__model_signed_in_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 3652
expression: picture
---
40x24 cursor 4,10 scrolled 0
|› /model                               ┃|
|Model            now  openai · gpt-6-sol|
|                                        |
|╭──────────────────────────────────────╮|
|│ Search    a model, or a vendor       │|
|╰──────────────────────────────────────╯|
|                                        |
|╭──────────────────────────────────────╮|
|│  openai · ChatGPT sign-in            │|
|├──────────────────────────────────────┤|
|│ › gpt-6-astra          872k  fast    │|
|│   gpt-6.1-sol          872k  fast    │|
|│   gpt-6-sol            872k  ← now   │|
|│   gpt-6-luna           872k  fast    │|
|│   gpt-5.6-sol          872k  fast    │|
|│   gpt-5.6-terra        872k  fast    │|
|│   gpt-5.6-luna         872k  fast    │|
|│   1 more with an API key · /login    │|
|│                                      │|
|╰──────────────────────────────────────╯|
|                                        |
|  Effort   ‹ low ›  medium   high   xhig|
|                                        |
|  tab · ↑↓ · ←→ · enter · esc           |
