tests/whole_screen/snapshots/whole_screen__model_signed_in_80.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 4,10 scrolled 0
|› /model                                                                       ┃|
|Model                                                    now  openai · gpt-6-sol|
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search    a model, or a vendor                                               │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|╭─────────────────────┬────────────────────────────────────────────────────────╮|
|│  Providers          │  openai · ChatGPT sign-in                      7 of 41 │|
|├─────────────────────┼────────────────────────────────────────────────────────┤|
|│   All            41 │ › gpt-6-astra                            872k  fast    │|
|│   Anthropic       7 │   gpt-6.1-sol                            872k  fast    │|
|│   DeepSeek        2 │   gpt-6-sol                              872k  ← now   │|
|│   Google          4 │   gpt-6-luna                             872k  fast    │|
|│   Meta            4 │   gpt-5.6-sol                            872k  fast    │|
|│   MiMo            2 │   gpt-5.6-terra                          872k  fast    │|
|│   MiniMax         2 │   gpt-5.6-luna                           872k  fast    │|
|│   MoonshotAI      4 │   1 more with an API key · /login                      │|
|│ › OpenAI          7 │                                                        │|
|╰─────────────────────┴────────────────────────────────────────────────────────╯|
|                                                                                |
|  Effort   ‹ low ›  medium   high   xhigh   max                                 |
|                                                                                |
|  tab pane · ↑↓ model · ←→ effort · enter takes both · esc to cancel            |
