tests/whole_screen/snapshots/whole_screen__model_trains_80.snap
---
source: tests/whole_screen/main.rs
assertion_line: 3677
expression: picture
---
80x24 cursor 4,14 scrolled 0
|› /model                                                                       ┃|
|Model                                                     now  nothing asked yet|
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search  muse                                                                 │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|╭─────────────────────┬────────────────────────────────────────────────────────╮|
|│  Providers          │  Models                                        4 of 42 │|
|├─────────────────────┼────────────────────────────────────────────────────────┤|
|│ › All             4 │ › muse-spark-1.3           Meta          1.0M          │|
|│   Anthropic       · │   muse-spark-1.3-contribu  Meta          1.0M  trains  │|
|│   DeepSeek        · │   muse-spark-1.2           Meta          1.0M          │|
|│   Google          · │   muse-spark-1.2-contribu  Meta          1.0M  trains  │|
|│   Meta            4 │                                                        │|
|│   MiMo            · │                                                        │|
|│   MiniMax         · │                                                        │|
|│   MoonshotAI      · │                                                        │|
|│   OpenAI          · │                                                        │|
|╰─────────────────────┴────────────────────────────────────────────────────────╯|
|                                                                                |
|  Effort   ‹ low ›  medium   high   xhigh                                       |
|                                                                                |
|  tab pane · ↑↓ model · ←→ effort · enter takes both · esc to cancel            |
