tests/whole_screen/snapshots/whole_screen__no_release_at_80.snap
---
source: tests/whole_screen/main.rs
assertion_line: 2069
expression: window.picture()
---
80x24 cursor 21,4 scrolled 0
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /release-notes 0.0.0                                                         ┃|
|                                                                               ●|
|! no release 0.0.0 · newest is ######                                          ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
