tests/whole_screen/snapshots/whole_screen__no_release_in_ascii_at_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 2086
expression: window.picture()
---
40x24 cursor 20,4 scrolled 0
|CRUCIBLE                                |
|/.../workspace                          |
|                                        |
|                                        |
|Warning: No models available. Use /login|
|or set an API key environment variable. |
|Then use /model to select a model.      |
|                                        |
|> /release-notes 0.0.0                  |
|+ ! no release 0.0.0 - newest is ###### |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|+--------------------------------------+|
|| >                                    ||
|+--------------------------------------+|
|ask mode on (shift+tab to cycle)        |
|                       transcript map > |
